# GenAi-take-home-assignment

./: .gitignore  README.md
concluded_presentations/: Amazon_Stock-6c955.pptx  Construction_Market_in_Brazil-5e81f.pptx  GM_motors-e0d93.pptx  Google_Stock_Analysis-c52ff.pptx  Microsoft_stock-89664.pptx  Tech_Industry_Growth-ae08f.pptx
src-backend/: main.py  pyproject.toml
src-backend/app/routes/presentation/: router.py  schemas.py  utils.py
src-backend/app/templates/: home.html
src-backend/core/: consts.py
src-backend/mcp_server/: mcp_server.py  test_presentation.py  tools.py  workflow.py
src-backend/mcp_server/agents/illustrator/: agent.py
src-backend/mcp_server/agents/ilustrator/: agent.py
src-backend/mcp_server/agents/planner/: agent.py  schemas.py
src-backend/mcp_server/agents/researcher/: agent.py
src-backend/mcp_server/agents/writer/: agent.py  prompts.py  schemas.py
src-backend/mcp_server/helper/: ppt_style.py  source_validator.py
src-backend/tests/: test_workflow.py
