[project]
name = "src-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "mcp[cli]>=1.26.0",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "python-pptx>=1.0.2",
    "tavily-python>=0.7.19",
]
